--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
   background-image: url('missile2.png');
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
   
 
 }
@@ -51,6 +52,7 @@ body {
   background-image: url('missile1.png');
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .rightWall {
