--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   width: 1000px;
   height: 700px;
   flex-wrap: wrap;
+  /* background-image: url('wormhole.gif'); */
 }
 
 .lifes{
@@ -83,4 +84,8 @@ body {
 }
 .leftWall {
 
+}
+
+.hidden {
+  display: none;
 }
