--- a/style.css
+++ b/style.css
@@ -111,3 +111,40 @@ h1{
   color: aliceblue;
   text-align: center;
 }
+h2{
+  font-family: 'Londrina Shadow', sans-serif;
+  font-size: 30px;
+  color: aliceblue;
+  /* text-align: center; */
+}
+
+h3{
+  font-family: 'Londrina Shadow', sans-serif;
+  font-size: 150px;
+  color: aliceblue;
+  text-align: center;
+}
+
+button{
+border-radius: 15%;
+background-color: greenyellow;
+padding: 5px;
+font-family: 'Londrina Shadow', sans-serif;
+font-size: 50px;
+margin-bottom: 100px;
+border: 3px solid indianred;
+}
+
+.startScreen{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+p{
+  font-family: 'Krona One', sans-serif;
+  color: aliceblue;
+  padding: 50px;
+  margin-left: 200px;
+  margin-right: 200px;
+}
