button hidden and battle after countdown

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   flex-direction: column;
   margin: 0;
   background-image: url('../assets/space.jpg');
+  background-size: cover;
 }
 
 .grid {
